<resources>
    <string name="app_name">Pedometer</string>
    <string name="today">Today</string>
    <string name="statistics">Statistics</string>
    <string name="history">History</string>
    <string name="step">Step</string>
    <string name="goal">Goal</string>
    <string name="km">Kilometers</string>
    <string name="dialogApplyGoal">Input step goal</string>
    <string name="dialogError">Error: Invalid data</string>
    <string name="addRecord">Adding new record</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="steps">Steps</string>
    <string name="km_short">Km</string>
    <string name="loading">Loading...</string>
    <string name="days">Days</string>
    <string name="month">Month</string>
    <string name="totalSteps">Total steps</string>
    <string name="totalKm">Total kilometers</string>
    <string name="week">Week</string>
    <string name="week_activity">Week Activity</string>
    <string name="month_activity">Month Activity</string>
    <string name="calculation">Сalculated...</string>
    <string name="goals">Goals</string>
    <string name="waiting_steps_today">Step count goal for today</string>
    <string name="waiting_steps_week">Expected number of steps per week</string>
    <string name="day">Day</string>
    <string name="dialogApplyAge">Input your age</string>
    <string name="settings">Settings</string>
    <string name="dialogAge">Change age</string>
</resources>