<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".GoalsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250sp"
            android:background="@drawable/layout_gradient"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal">
            <TextView
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/goalsStepsTakenTextView"
                android:layout_centerInParent="true"
                android:text="@string/waiting_steps_today"
                android:textColor="@color/textGoal"
                android:gravity="center"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/goalsStepsTakenTextView"
                android:layout_centerInParent="true"
                android:textColor="@color/textGoal"
                android:textStyle="bold"
                android:text="@string/calculation"
                android:textSize="47sp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_round"
                android:orientation="vertical"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="55sp"
                android:padding="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="15sp"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/waiting_steps_week"
                        android:textColor="@color/textToday"
                        android:gravity="center"
                        android:textSize="18sp" />
                    <TableLayout
                        android:id="@+id/goalsTableLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/background"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/menu_navigation"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>